--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -52,12 +52,14 @@
             </div>
             <div id="content">
             	<div id="content-holder">
-	                <div class="left">
-	                    {pyro:template:body}
-	                </div>
-	                <div class="right">
-	                    {pyro:widgets:area slug="latest_news"}
-	                </div>
+            		<div class="seperator-holder">
+		                <div class="left">
+		                    {pyro:template:body}
+		                </div>
+		                <div class="right">
+		                    {pyro:widgets:area slug="latest_news"}
+		                </div>
+            		</div>
             	</div>
             </div>
         </div>
