--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -3,37 +3,52 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>New Template</title>
-    {pyro:theme:css file="style.css"}       
+    {pyro:theme:css file="inner-style.css"}       
 </head>
 <body>
-    <div id="main">
-        <div id="left">
-            <div id="logo">
-                {pyro:theme:image file="logo.png" alt="Fun!"}
-            </div>
-        </div>
-        <div id="right">
-            <div id="menu">
-                <div class="left"></div>
-                <div class="mid">
-                    <ul>
-                    {pyro:navigation:links group="header"}
-                        <li class="menu-item">
-                            <a href="{url}" class="{class}">
-                                <span class="list-left left"></span>
-                                <span class="list-mid mid">{title}</span>
-                                <span class="list-right right"></span>
-                            </a>
-                        </li>
-                    {/pyro:navigation:links}
-                    </ul>
-                </div>
-                <div class="right"></div>
-            </div>
-            <div id="content">
-                {pyro:template:body}
-            </div>
-        </div>
-    </div>
+	<div id="main">
+		<div id="header">
+			<div id="logo">
+			{pyro:theme:image file="logo.png" alt="Fun!"}
+			</div>		
+			<div id="menu">
+				<div class="left"></div>
+				<div class="mid">
+				<ul>
+					{pyro:navigation:links group="header"}
+					<li class="menu-item">
+				        <a href="{url}" class="{class}">
+				            <span class="list-left left"></span>
+				            <span class="list-mid mid">{title}</span>
+				            <span class="list-right right"></span>
+				        </a>
+				    </li>
+					{/pyro:navigation:links}
+				</ul>
+			    </div>
+			    <div class="right"></div>
+			</div>
+			<div id="content">
+				<div id="latest-news">
+					{pyro:widgets:area slug="latest_news"}
+				</div>
+				<div id="left">
+					<a href="" class="verify">
+						
+					</a>
+					<a href="" class="gallery">
+						<span>
+							Gallery
+						</span>
+					</a>
+				</div>
+				<div id="right">
+					<div id="content-holder">
+						{pyro:template:body}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 </html>
