--- a/addons/themes/mariners-temp/views/partials/menu-modules.html
+++ b/addons/themes/mariners-temp/views/partials/menu-modules.html
@@ -1,30 +1,35 @@
-<div class="links certificate">
-	<a href="/mariner_certificates">
-		<span class="content">
-			Verify Certificate
-		</span>
-	</a>
-</div>
-<div class="links gallery">
-	<div class="content">
-		Gallery
+<a href="<?= base_url() ?>mariner_certificates">
+	<div class="links certificate">
+			<span class="content">
+			</span>
 	</div>
-
-</div>
-<div class="links right-links announcement green">
-	<div class="content">
-		Announcements
+</a>
+<a href="<?= base_url() ?>gallery">
+	<div class="links gallery">
+		<div class="content">
+			Gallery
+		</div>
+	
 	</div>
-</div>
-<div class="links right-links course-offered green">
-	<div class="content">
-		Courses Offered
+</a>
+<a href="<?= base_url() ?>announcements">
+	<div class="links right-links announcement green">
+		<div class="content">
+			Announcements
+		</div>
 	</div>
-</div>
-<div class="links right-links find-us green">
-	<a href="/contact" class="content>
-		<span>
+</a>
+<a href="<?= base_url() ?>course-offered">
+	<div class="links right-links course-offered green">
+		<div class="content">
+			Courses Offered
+		</div>
+	</div>
+</a>
+<a href="<?= base_url() ?>contact">
+	<div class="links right-links find-us green">
+		<div class="content">
 			Find Us
-		</span>
-	</a>
-</div>
+		</div>
+	</div>
+</a>
