add link for the left module of the inner page

--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -33,10 +33,10 @@
 					{pyro:widgets:area slug="latest_news"}
 				</div>
 				<div id="left">
-					<a href="" class="verify">
+					<a href="<?= base_url()?>mariner_certificates" class="verify">
 						
 					</a>
-					<a href="" class="gallery">
+					<a href="<?= base_url()?>gallery" class="gallery">
 						<span>
 							Gallery
 						</span>
