--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>New Template</title>
+   	<title>{pyro:settings:site_name}&nbsp;&bull;&nbsp;{pyro:template:title}</title>
     {pyro:theme:css file="style.css"}       
     {pyro:theme:js file="jquery-1.6.1.min.js"}
     <script type="text/javascript">
