--- a/addons/themes/mariners-temp/views/partials/slide-banner.html
+++ b/addons/themes/mariners-temp/views/partials/slide-banner.html
@@ -1,10 +1,11 @@
 <div id="carousel">
     <ul>
         <li>
-            {pyro:theme:image:slide-image file="logo.png" alt="Fun!"}
+            {pyro:theme:image:slide-image file="left-model.png" alt="Fun!"}
         </li>
         <li>
-            <img alt="" src="images/muonline.gif" width="733" height="394" />
+            {pyro:theme:image:slide-image file="dolphin.png" alt="Fun!"}
+            <!-- <img alt="" src="images/muonline.gif" width="733" height="394" /> -->
         </li>        
     </ul>
 </div> 
