--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -26,7 +26,8 @@
 
         	$('#carousel').infiniteCarousel({
         		displayTime: 6000,
-        		textholderHeight : .25
+        		textholderHeight : .25,
+        		displayThumbnails: 0
         	});
 
             
