add new image for the slider

--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -25,9 +25,10 @@
             });
 
         	$('#carousel').infiniteCarousel({
-        		displayTime: 6000,
+        		displayTime: 4000,
         		textholderHeight : .25,
-        		displayThumbnails: 0
+        		displayThumbnails: 0,
+        		displayProgressBar: 0
         	});
 
             
