--- a/addons/themes/mariners-temp/views/partials/slide-banner.html
+++ b/addons/themes/mariners-temp/views/partials/slide-banner.html
@@ -6,6 +6,10 @@
         <li>
             {pyro:theme:image:slide-image file="slide-image/dolphin.png" alt="Fun!"}
             <!-- <img alt="" src="images/muonline.gif" width="733" height="394" /> -->
+        </li>
+        <li>
+            {pyro:theme:image:slide-image file="slide-image/ship.png" alt="Fun!"}
+            <!-- <img alt="" src="images/muonline.gif" width="733" height="394" /> -->
         </li>        
     </ul>
 </div> 
