--- a/addons/modules/galleries/css/galleries.css
+++ b/addons/modules/galleries/css/galleries.css
@@ -95,3 +95,25 @@ form.crud ul li div
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 }
+
+/* added for public viewing */
+ul.galleries_list {
+    float: left;
+    list-style: none outside none;
+    padding: 0;
+}
+ul.galleries_list li {
+    border: 1px solid #A3A3A3;
+    float: left;
+    height: 100px;
+    margin-bottom: 10px;
+    margin-right: 10px;
+    padding: 5px;
+    width: 100px;
+}
+ul.galleries_list li:hover {
+	border: 1px solid #4652FC;
+}
+ul.galleries_list img {
+	border: none;
+}
