--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -3,7 +3,51 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>New Template</title>
-    {pyro:theme:css file="inner-style.css"}       
+    {pyro:theme:css file="inner-style.css"}
+    
+    <!-- start added assets-->
+    <!-- Grab Google CDNs jQuery, fall back if necessary --> 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script> 
+    <script>!window.jQuery && document.write('<script src="/system/pyrocms/assets/js/jquery/jquery.js"><\/script>')</script> 
+    
+    <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--> 
+    
+    <script type="text/javascript"> 
+    var APPPATH_URI = "/system/pyrocms/";
+    var BASE_URL = "http://mariners-training.dev/";
+    var BASE_URI = "/";
+    var DEFAULT_TITLE = "Un-named Website";
+    var DIALOG_MESSAGE = "Are you sure you want to delete this? It cannot be undone.";
+    </script> 
+ 
+        <link href="/system/pyrocms/assets/css/jquery/jquery-ui.css" type="text/css" rel="stylesheet" /> 
+ 
+        <link href="/system/pyrocms/assets/css/jquery/colorbox.css" type="text/css" rel="stylesheet" /> 
+ 
+        <script type="text/javascript">jQuery.noConflict();</script> 
+        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery-ui-1.8.4.min.js"></script> 
+ 
+        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.colorbox.min.js"></script> 
+ 
+        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.livequery.js"></script> 
+ 
+        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.uniform.min.js"></script> 
+ 
+        <script type="text/javascript" src="/system/pyrocms/assets/js/admin/functions.js"></script> 
+ 
+        <script type="text/javascript">pyro.apppath_uri="/system/pyrocms/";pyro.base_uri="/";</script> 
+        <link href="http://mariners-training.dev/addons/modules/galleries/css/galleries.css" type="text/css" rel="stylesheet" /> 
+ 
+        <script type="text/javascript" src="/addons/modules/galleries/js/drag_drop.js"></script> 
+ 
+        <script type="text/javascript" src="/addons/modules/galleries/js/functions.js"></script> 
+ 
+        <script type="text/javascript" src="/addons/modules/galleries/js/form.js"></script>     
+    
+    
+    <!-- end added assets -->
+    
+    {pyro:template:metadata}
 </head>
 <body>
 	<div id="main">
