--- a/addons/themes/mariners-temp/views/partials/menu-modules.html
+++ b/addons/themes/mariners-temp/views/partials/menu-modules.html
@@ -4,7 +4,7 @@
 			</span>
 	</div>
 </a>
-<a href="<?= base_url() ?>gallery">
+<a href="<?= base_url() ?>galleries">
 	<div class="links gallery">
 		<div class="content">
 			Gallery
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 </a>
-<a href="<?= base_url() ?>course-offered">
+<a href="<?= base_url() ?>courses-offered">
 	<div class="links right-links course-offered green">
 		<div class="content">
 			Courses Offered
