fixed conflicting js on galleries -- TODO: fix js on pages with lightbox classes

--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <title>New Template</title>
     {pyro:theme:css file="inner-style.css"}
     
@@ -18,36 +19,11 @@
     var BASE_URI = "/";
     var DEFAULT_TITLE = "Un-named Website";
     var DIALOG_MESSAGE = "Are you sure you want to delete this? It cannot be undone.";
-    </script> 
- 
-        <link href="/system/pyrocms/assets/css/jquery/jquery-ui.css" type="text/css" rel="stylesheet" /> 
- 
-        <link href="/system/pyrocms/assets/css/jquery/colorbox.css" type="text/css" rel="stylesheet" /> 
- 
-        <script type="text/javascript">jQuery.noConflict();</script> 
-        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery-ui-1.8.4.min.js"></script> 
- 
-        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.colorbox.min.js"></script> 
- 
-        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.livequery.js"></script> 
- 
-        <script type="text/javascript" src="/system/pyrocms/assets/js/jquery/jquery.uniform.min.js"></script> 
- 
-        <script type="text/javascript" src="/system/pyrocms/assets/js/admin/functions.js"></script> 
- 
-        <script type="text/javascript">pyro.apppath_uri="/system/pyrocms/";pyro.base_uri="/";</script> 
-        <link href="http://mariners-training.dev/addons/modules/galleries/css/galleries.css" type="text/css" rel="stylesheet" /> 
- 
-        <script type="text/javascript" src="/addons/modules/galleries/js/drag_drop.js"></script> 
- 
-        <script type="text/javascript" src="/addons/modules/galleries/js/functions.js"></script> 
- 
-        <script type="text/javascript" src="/addons/modules/galleries/js/form.js"></script>     
-    
-    
+    </script>      
     <!-- end added assets -->
     
     {pyro:template:metadata}
+    
 </head>
 <body>
 	<div id="main">
@@ -80,7 +56,7 @@
 					<a href="<?= base_url()?>mariner_certificates" class="verify">
 						
 					</a>
-					<a href="<?= base_url()?>gallery" class="gallery">
+					<a href="<?= base_url()?>galleries" class="gallery">
 						<span>
 							Gallery
 						</span>
