--- a/addons/themes/mariners-temp/css/style.css
+++ b/addons/themes/mariners-temp/css/style.css
@@ -1,14 +1,21 @@
 @CHARSET "UTF-8";
 body {
-    background: url("../img/content-bg.png") repeat-x scroll -2px 104px transparent;
+    background: url("../img/background.png") repeat-x scroll 0 0 transparent;
     margin: 0;
     padding: 0;	
     font-family: arial;
     font-size: 12px;
 }
 
+#blue-sea{
+	background: url("../img/content-bg.png") repeat-x scroll -2px 104px transparent;
+	float: left;
+	width: 100%;
+	min-width: 1024px;
+}
+
 #main {
-    min-width: 1024px;
+    width: 1024px;
     padding-top: 35px;	
 }
 
@@ -22,8 +29,10 @@ body {
 
 #left {
     /*background: url("../img/left-model.png") no-repeat scroll 0 0 transparent;*/
-    height: 402px;
+    /*height: 402px;*/
     width: 404px;
+    position: relative;
+    z-index: 100;
 }
 
 #logo,
@@ -174,9 +183,11 @@ body {
 }
 /*  END MENU  */
 #links-container {
-    float: left;
-    margin-top: -45px;
-    width: 1050px;
+	float: left;
+	margin-top: -45px;
+	position: relative;
+	width: 1050px;
+	z-index: 110;
 }
 
 #links-container a {
