--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   	<title>{pyro:settings:site_name}&nbsp;&bull;&nbsp;{pyro:template:title}</title>
+   	<title>Mariners Training - {pyro:template:title}</title>
     {pyro:theme:css file="style.css"}       
     {pyro:theme:js file="jquery-1.6.1.min.js"}       
     {pyro:theme:js file="jquery.infinitecarousel.js"}
@@ -36,48 +36,50 @@
     </script>       
 </head>
 <body>
-    <div id="main">
-        <div id="left">
-            <div id="logo">
-                {pyro:theme:image file="logo.png" alt="Fun!"}
-            </div>
-			{pyro:theme:partial name="slide-banner"}                	
-        </div>
-        <div id="right">
-            <div id="menu">
-                <div class="left">
-                </div>
-                <div class="mid">
-                    <ul>
-                    {pyro:navigation:links group="header"}
-                        <li class="menu-item">
-                            <a href="{url}" class="{class}">
-                                <span class="list-left left"></span>
-                                <span class="list-mid mid">{title}</span>
-                                <span class="list-right right"></span>
-                            </a>
-                        </li>
-                    {/pyro:navigation:links}
-                    </ul>
-                </div>
-                <div class="right"></div>
-            </div>
-            <div id="content">
-            	<div id="content-holder">
-            		<div class="seperator-holder">
-		                <div class="left">
-		                    {pyro:template:body}
-		                </div>
-		                <div class="right">
-		                    {pyro:widgets:area slug="latest_news"}
-		                </div>
-            		</div>
-            	</div>
-            </div>
-        </div>
-        <div id="links-container">
-            {pyro:theme:partial name="menu-modules"}
-        </div>
-    </div>
+	<div id="blue-sea">
+	    <div id="main">
+	        <div id="left">
+	            <div id="logo">
+	                {pyro:theme:image file="logo.png" alt="Fun!"}
+	            </div>
+				{pyro:theme:partial name="slide-banner"}                	
+	        </div>
+	        <div id="right">
+	            <div id="menu">
+	                <div class="left">
+	                </div>
+	                <div class="mid">
+	                    <ul>
+	                    {pyro:navigation:links group="header"}
+	                        <li class="menu-item">
+	                            <a href="{url}" class="{class}">
+	                                <span class="list-left left"></span>
+	                                <span class="list-mid mid">{title}</span>
+	                                <span class="list-right right"></span>
+	                            </a>
+	                        </li>
+	                    {/pyro:navigation:links}
+	                    </ul>
+	                </div>
+	                <div class="right"></div>
+	            </div>
+	            <div id="content">
+	            	<div id="content-holder">
+	            		<div class="seperator-holder">
+			                <div class="left">
+			                    {pyro:template:body}
+			                </div>
+			                <div class="right">
+			                    {pyro:widgets:area slug="latest_news"}
+			                </div>
+	            		</div>
+	            	</div>
+	            </div>
+	        </div>
+	        <div id="links-container">
+	            {pyro:theme:partial name="menu-modules"}
+	        </div>
+	    </div>
+	</div>
 </body>
 </html>
