--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <title>New Template</title>
+
+    <title>Mariners Training - {pyro:template:title}</title>
+
     {pyro:theme:css file="inner-style.css"}
     
     <!-- start added assets-->
@@ -17,7 +18,7 @@
     var APPPATH_URI = "/system/pyrocms/";
     var BASE_URL = "http://mariners-training.dev/";
     var BASE_URI = "/";
-    var DEFAULT_TITLE = "Un-named Website";
+    var DEFAULT_TITLE = "Mariners Traininge";
     var DIALOG_MESSAGE = "Are you sure you want to delete this? It cannot be undone.";
     </script>      
     <!-- end added assets -->
