change the layout of the inner_page_layout

--- a/addons/themes/mariners-temp/views/partials/inner_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/inner_page_layout.html
@@ -65,7 +65,9 @@
 				</div>
 				<div id="right">
 					<div id="content-holder">
-						{pyro:template:body}
+						<div id="innner-content-holder">
+							{pyro:template:body}
+						</div>
 					</div>
 				</div>
 			</div>
