--- a/addons/themes/mariners-temp/css/inner-style.css
+++ b/addons/themes/mariners-temp/css/inner-style.css
@@ -11,6 +11,10 @@ body {
 
 h1, h2, h3, h4, h5 { margin: 0;}
 
+#innner-content-holder {
+	width: 796px;
+}
+
 form p {
     display: block;
     float: left;
