changes slider banner

--- a/addons/themes/mariners-temp/views/partials/slide-banner.html
+++ b/addons/themes/mariners-temp/views/partials/slide-banner.html
@@ -1,15 +1,49 @@
 <div id="carousel">
     <ul>
         <li>
-            {pyro:theme:image:slide-image file="slide-image/left-model.png" alt="Fun!"}
+            {pyro:theme:image:slide-image file="slide-image/img1.jpg" alt="Fun!"}
         </li>
         <li>
-            {pyro:theme:image:slide-image file="slide-image/dolphin.png" alt="Fun!"}
-            <!-- <img alt="" src="images/muonline.gif" width="733" height="394" /> -->
+            {pyro:theme:image:slide-image file="slide-image/img2.jpg" alt="Fun!"}
         </li>
         <li>
-            {pyro:theme:image:slide-image file="slide-image/ship.png" alt="Fun!"}
-            <!-- <img alt="" src="images/muonline.gif" width="733" height="394" /> -->
-        </li>        
+            {pyro:theme:image:slide-image file="slide-image/img3.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img4.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img5.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img6.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img7.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img8.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img9.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img10.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img11.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img12.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img13.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img14.jpg" alt="Fun!"}
+        </li>
+        <li>
+        	{pyro:theme:image:slide-image file="slide-image/img15.jpg" alt="Fun!"}
+        </li>
     </ul>
 </div> 
