--- a/addons/themes/mariners-temp/views/partials/home_page_layout.html
+++ b/addons/themes/mariners-temp/views/partials/home_page_layout.html
@@ -70,7 +70,7 @@
 			                    {pyro:template:body}
 			                </div>
 			                <div class="right">
-			                    {pyro:widgets:area slug="latest_news"}
+			                    {pyro:widgets:area slug="latest_news_home"}
 			                </div>
 	            		</div>
 	            	</div>
