change style of the home latest news

--- a/addons/themes/mariners-temp/css/style.css
+++ b/addons/themes/mariners-temp/css/style.css
@@ -88,7 +88,8 @@ body {
 }
 
 #content-holder h3 {
-	margin-bottom: 23px;
+    margin-bottom: 18px;
+    margin-top: 24px;
 }
 
 #content-holder a {
