--- a/addons/themes/mariners-temp/css/inner-style.css
+++ b/addons/themes/mariners-temp/css/inner-style.css
@@ -255,7 +255,8 @@ form input[type=submit] {
 
 #certificate-verification label {
 	font-size: 30px;
-	
+	margin-left: 35px;
+    text-align: left;
 }
 
 #certificate-verification input[type=text] {
@@ -273,9 +274,11 @@ form input[type=submit] {
 #certificate-verification #verify-button {
 	background: url("../img/buttons/verify-button.png") no-repeat scroll 0 0 transparent;
     border: 0 none;
-    height: 58px;
-    width: 227px;
     cursor: pointer;
+    float: left;
+    height: 58px;
+    margin-left: 20px;
+    width: 227px;
 }
 
 #comments_form_container textarea {
