fix chrome menu

--- a/addons/themes/mariners-temp/css/inner-style.css
+++ b/addons/themes/mariners-temp/css/inner-style.css
@@ -90,6 +90,7 @@ form input[type=submit] {
 
 #content {
 	clear: both;
+	overflow-x: hidden;
 }
 /*	LATEST NEWS	*/
 #latest-news a {
@@ -204,7 +205,7 @@ form input[type=submit] {
     text-decoration: none;
 }
 
-#menu li a:hover {
+#menu li:hover a {
     color: #FFFFFF;
     display: block;
     margin-top: -10px;
@@ -217,17 +218,17 @@ form input[type=submit] {
     padding-top: 0;
 }
 
-#menu li a:hover .list-left {
+#menu li:hover a .list-left {
     background: url("../img/active-menu-left.png") no-repeat scroll 0 0 transparent;
     width: 7px;
 }
 
-#menu li a:hover .list-mid {
+#menu li:hover a .list-mid {
     background: url("../img/active-menu-mid.png") repeat-x scroll 0 0 transparent;
     padding: 10px 6px 18px;
 }
 
-#menu li a:hover .list-right {
+#menu li:hover a .list-right {
     background: url("../img/active-menu-right.png") no-repeat;
 }
 /*  END MENU  */
