--- a/addons/themes/mariners-temp/views/partials/menu-modules.html
+++ b/addons/themes/mariners-temp/views/partials/menu-modules.html
@@ -19,7 +19,7 @@
 		</div>
 	</div>
 </a>
-<a href="<?= base_url() ?>courses-offered">
+<a href="<?= base_url() ?>course-offered">
 	<div class="links right-links course-offered green">
 		<div class="content">
 			Courses Offered
